#456 Correction sur le bouton du filtre de la carte, alignement des deux boutons loupe.

--- a/static/static_dirs/polo/css/custom.css
+++ b/static/static_dirs/polo/css/custom.css
@@ -564,7 +564,7 @@ a.link, a.link:visited, a.link:active {
 }
 
 #valider_recherche_manufacture{
-    padding: 5px;
+    padding-top: 5px;
 }
 
 
